<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainMenuLayout">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/mainMenuUsernameLayout">

        <TextView
                android:text="@string/default_player_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/mainMenuUsernameTextView"
                android:layout_weight="0"
                android:layout_marginTop="4dp" />

        <ImageButton
                android:id="@+id/mainMenuUsernameButton"
                android:layout_width="48dp"
                android:layout_height="32dp"
                android:layout_weight="0"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:srcCompat="@android:drawable/ic_menu_edit"
                tools:ignore="SpeakableTextPresentCheck"
                android:layout_marginStart="12dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainMenuButtonsLayout"
            android:layout_width="300dp"
            android:layout_height="500dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainMenuUsernameLayout">

        <Button
                android:text="@string/menu_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createGameButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp" />

        <Button
                android:text="@string/menu_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/joinGameButton"
                app:layout_constraintTop_toBottomOf="@+id/createGameButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="40dp" />

        <Button
                android:text="@string/menu_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/historyGamesButton"
                app:layout_constraintTop_toBottomOf="@+id/joinGameButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="40dp" />

        <Button
                android:text="@string/menu_leave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/leaveAppButton"
                app:layout_constraintTop_toBottomOf="@+id/historyGamesButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
