<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/createGameLayout">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/createGameUDPInfosLayout"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

        <TextView
                android:text="@string/create_game_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createGameIpLabelTextView"
                android:layout_weight="1" />

        <TextView
                android:text="197.0.0.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createGameIpValueTextView"
                android:layout_weight="1" />

        <TextView
                android:text="@string/create_game_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createGamePortLabelTextView"
                android:layout_weight="1" />

        <TextView
                android:text="8888"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createGamePortValueTextView"
                android:layout_weight="1" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/createGameUDPInfosLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/createGameConnectedPlayersRecyclerView"
            app:layout_constraintBottom_toTopOf="@+id/createGameButtonsLayout"
            tools:itemCount="8"
            tools:listitem="@layout/player_item"
            android:layout_marginTop="50dp">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/createGameButtonsLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="60dp">

        <Button
                android:text="@string/create_game_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createGameStartButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="50dp" />

        <Button
                android:text="@string/return_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createGameReturnButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
